err/rbco.wfdocumentator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pep362-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prdg'...
Listing './lib/python3.5/site-packages/prdg/util'...
Compiling './lib/python3.5/site-packages/prdg/util/datastructures.py'...
***   File "./lib/python3.5/site-packages/prdg/util/datastructures.py", line 126
    print d[2]
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/prdg.util-0.0.7.egg-info'...
Listing './lib/python3.5/site-packages/rbco'...
Listing './lib/python3.5/site-packages/rbco/commandwrap'...
Compiling './lib/python3.5/site-packages/rbco/commandwrap/decorators.py'...
***   File "./lib/python3.5/site-packages/rbco/commandwrap/decorators.py", line 25
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rbco/wfdocumentator'...
Listing './lib/python3.5/site-packages/rbco/wfdocumentator/browser'...
Listing './lib/python3.5/site-packages/rbco/wfdocumentator/locales'...
Listing './lib/python3.5/site-packages/rbco/wfdocumentator/locales/pt_BR'...
Listing './lib/python3.5/site-packages/rbco/wfdocumentator/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rbco.commandwrap-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/rbco.wfdocumentator-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/pep362_py2_fodder.py'...
***   File "./lib/python3.5/site-packages/tests/pep362_py2_fodder.py", line 1
    def tuple_args((a, (b,))):
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
